tools/tests/errors/surf_arity_14.ki
# builtin len() given too many positional arguments
discard len([1], [2])
